--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-471.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-2.09MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-4.32MB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-1011.1KB/s(Youtube:不良林), server: 196.247.59.154, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇸🇬 新加坡-1.71MB/s(Youtube:不良林), server: node-tw-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-tw-c-01.texo.network, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-334.9KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-848.1KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇯🇵 日本-3.09MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.90MB/s(Youtube:不良林), server: us-am32-5.eqnode.net, port: 8081, type: ssr, cipher: aes-256-cfb, password: YFVrXZgRo, protocol: origin, obfs: tls1.2_ticket_auth, protocol-param: "", obfs-param: ""}
-  - {name: 未知国家-1.97MB/s(Youtube:不良林), server: 103.186.149.132, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.186.149.132}}
+  - {name: 🇨🇳 中国-329.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.06MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-471.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-413.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-448.2KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
+  - {name: 🇫🇷 法国-791.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇨🇳 中国-390.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-379.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-424.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1011.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-848.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 未知国家-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1011.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-848.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 未知国家-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1011.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-848.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 未知国家-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1011.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-848.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 未知国家-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1011.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-848.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 未知国家-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1011.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-848.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 未知国家-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-4.32MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1011.1KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.71MB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-848.1KB/s(Youtube:不良林)
       - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.90MB/s(Youtube:不良林)
-      - 未知国家-1.97MB/s(Youtube:不良林)
+      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
+      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
