--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-3.09MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-329.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32002, type: trojan, password: 2f606ee8-3cfa-30b2-a191-f88efe912f5c, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-3.06MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-471.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: 7688df6f-bf65-3368-b55e-d78efea6a582, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-413.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65067, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-448.2KB/s(Youtube:不良林), server: 36.134.156.5, port: 65031, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 36.134.156.5}}
-  - {name: 🇫🇷 法国-791.5KB/s(Youtube:不良林), server: 51.38.118.42, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇺🇸 美国-541.4KB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
+  - {name: 🇨🇦 加拿大-2.17MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
+  - {name: 🇨🇳 中国-222.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-390.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-379.7KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-424.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇦 加拿大-1.04MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-371.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.52MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-673.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-329.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
-      - 🇨🇳 中国-471.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-413.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-448.2KB/s(Youtube:不良林)
-      - 🇫🇷 法国-791.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
+      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-379.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
