--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-541.4KB/s(Youtube:不良林), server: 103.5.54.177, port: 54723, type: vmess, uuid: 1031729b-4fd5-495c-f21f-94c94ffd3afc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: 103.5.54.177}}
-  - {name: 🇨🇦 加拿大-2.17MB/s(Youtube:不良林), server: 134.195.196.85, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇨🇦 加拿大-1.05MB/s(Youtube:不良林), server: 134.195.196.85, port: 5001, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇨🇳 中国-222.3KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65073, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-390.4KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-424.0KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.04MB/s(Youtube:不良林), server: 196.247.59.154, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇦 加拿大-371.8KB/s(Youtube:不良林), server: 196.247.59.154, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇯🇵 日本-3.06MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12002, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
+  - {name: 🇮🇹 意大利-280.0KB/s(Youtube:不良林), server: 92.223.93.233, port: 1035, type: ss, cipher: chacha20-ietf-poly1305, password: )1N1E6v0SU_rGTpg}
+  - {name: 🇻🇳 越南-9.65MB/s(Youtube:不良林), server: 103.166.140.108, port: 80, type: vmess, uuid: a479fc02-07c5-4864-8564-c4f147dfa488, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /shopvpn.net, ws-headers: {Host: 103.166.140.108}}
+  - {name: 🇯🇵 日本-2.19MB/s(Youtube:不良林), server: node-jp-c-01.texo.network, port: 8443, type: trojan, password: 91fc891c-510f-3a1b-aa77-9bee2c759522, sni: node-jp-c-01.texo.network, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-3.09MB/s(Youtube:不良林), server: supernortheast.xn--mesv7f5toqlp.club, port: 12003, type: trojan, password: dd04c158-1bac-47cd-99c1-5c4f64796dd5, sni: supernortheast.xn--mesv7f5toqlp.club, skip-cert-verify: true}
   - {name: 🇨🇦 加拿大-1.52MB/s(Youtube:不良林), server: 196.247.59.154, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇦 加拿大-673.4KB/s(Youtube:不良林), server: 138.197.166.205, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
+  - {name: 🇳🇱 荷兰-432.8KB/s(Youtube:不良林), server: 41.216.177.41, port: 443, type: trojan, password: 274c1b23-2bfe-40ac-943c-ebc1aa044b22, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-1.40MB/s(Youtube:不良林), server: 196.247.59.154, port: 805, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇳🇱 荷兰-3.01MB/s(Youtube:不良林), server: bai-piao-wang-zhe.iplc.nl.884899.cf, port: 443, type: trojan, password: e49f9132-4f1c-4a11-998f-0b90697254e6, sni: bai-piao-wang-zhe.iplc.nl.884899.cf, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-280.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.01MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-280.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.01MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-280.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.01MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-280.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.01MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-280.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.01MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-280.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.01MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-541.4KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-2.17MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-222.3KB/s(Youtube:不良林)
-      - 🇨🇳 中国-390.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-424.0KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.04MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-371.8KB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.06MB/s(Youtube:不良林)
+      - 🇮🇹 意大利-280.0KB/s(Youtube:不良林)
+      - 🇻🇳 越南-9.65MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.19MB/s(Youtube:不良林)
+      - 🇯🇵 日本-3.09MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-1.52MB/s(Youtube:不良林)
       - 🇨🇦 加拿大-673.4KB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-432.8KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.40MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-3.01MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
